samples/_failures_safe/1761692610_e5f5c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42d0ff68.c: In function ‘main’:
./samples/SAFE/__tmp_42d0ff68.c:160:25: error: missing terminating " character
  160 |         fprintf(stderr, "Error reading
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_42d0ff68.c:160:9: error: expected expression at end of input
  160 |         fprintf(stderr, "Error reading
      |         ^~~~~~~
./samples/SAFE/__tmp_42d0ff68.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42d0ff68.c:160:9: error: expected declaration or statement at end of input
